--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 .btn {
-  @apply font-bold py-2 px-4 rounded bg-blue-500 text-white;
+  @apply font-bold py-2 px-4 rounded bg-blue-500 text-white text-center;
+}
+.prose a {
+  text-decoration: none !important;
 }
